Fix Chrome crash after return from DOFF to exit prompt

Bug: 750874
Change-Id: I20af0faf8b3acd37989e8d559ca5d688ecc10ca1