chrome/android/java/src/org/chromium/chrome/browser/vr_shell/OnExitVrRequestListener.java
@@ -17,5 +17,5 @@ public interface OnExitVrRequestListener {
      * Called if the exit request was denied (e.g. user
      * chose to not exit VR).
      */
-    void onDenied();
+    void onDenied(int reason);
 }
